@@ -37,11 +37,11 @@ namespace YAFC {
                 }
 
                 var table = page.content as ProductionTable;
-                using var grid = gui.EnterInlineGrid(ElementWidth, 1f);
+                using var grid = gui.EnterInlineGrid(ElementWidth, ElementSpacing);
                 foreach (KeyValuePair<string, GoodDetails> entry in view.allGoods) {
                     float amountAvailable = YAFCRounding((entry.Value.totalProvided > 0 ? entry.Value.totalProvided : 0) + entry.Value.extraProduced);
                     float amountNeeded = YAFCRounding((entry.Value.totalProvided < 0 ? -entry.Value.totalProvided : 0) + entry.Value.totalNeeded);
-                    if (Math.Abs(amountAvailable - amountNeeded) < Epsilon || amountNeeded == 0) {
+                    if (view.model.showOnlyIssues && (Math.Abs(amountAvailable - amountNeeded) < Epsilon || amountNeeded == 0)) {
                         continue;
                     }
 
@@ -87,6 +87,7 @@ namespace YAFC {
 
         static readonly float Epsilon = 1e-5f;
         static readonly float ElementWidth = 3;
+        static readonly float ElementSpacing = 1;
         struct GoodDetails {
             public float totalProvided;
             public float totalNeeded;
@@ -142,6 +143,11 @@ namespace YAFC {
         }
 
         protected override void BuildContent(ImGui gui) {
+            if (gui.BuildCheckBox("Only show issues", model.showOnlyIssues, out bool newValue)) {
+                model.showOnlyIssues = newValue;
+                Recalculate();
+            }
+
             scrollArea.Build(gui);
         }
 
@@ -191,7 +197,17 @@ namespace YAFC {
                 }
             }
 
-            goodsColumn.width = allGoods.Count * ElementWidth;
+            int count = 0;
+            foreach (KeyValuePair<string, GoodDetails> entry in allGoods) {
+                float amountAvailable = YAFCRounding((entry.Value.totalProvided > 0 ? entry.Value.totalProvided : 0) + entry.Value.extraProduced);
+                float amountNeeded = YAFCRounding((entry.Value.totalProvided < 0 ? -entry.Value.totalProvided : 0) + entry.Value.totalNeeded);
+                if (model != null && model.showOnlyIssues && (Math.Abs(amountAvailable - amountNeeded) < Epsilon || amountNeeded == 0)) {
+                    continue;
+                }
+                count++;
+            }
+
+            goodsColumn.width = count * (ElementWidth + ElementSpacing);
 
             Rebuild(visualOnly);
             scrollArea.RebuildContents();
